2006-01-06  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am, src/data.c, src/directions.c, src/directions.h,
	src/init.c, src/keybind.c, src/log.c src/map-link.c, src/map.c,
	src/map.h, src/mccpDecompress.c, src/mccpDecompress.h, src/mudlist.c,
	src/net.c, src/prefs.c, src/profiles.c, src/python.c, src/telnet.c,
	src/tray.c, src/window.c: Remove old sources from CVS.

	* src/gnome-mud.h: Remove references to mccp.

	* MAINTAINERS: Add Les Harris and Daniel Patton.

2006-01-05  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Don't check for Python, and don't link it in.

	* src/gnome-mud.c, src/modules.c, src/modules_api.c,
	src/mud-preferences-window.c, src/mud-profile.c, src/mud-tray.c,
	src/mud-window-mconnect.c, src/mud-window-mudedit.c,
	src/mud-window-mudlist.c, src/mud-window-profile.c, src/mud-window.c:
	Prune includes.

2006-01-05  Les Harris  <lescom@comcast.net>

	* src/mud-tray.h, src/mud-tray.c: Converted the old trayicon code into
	a full fledged GObject.
	* src/mud-window.c, src/mud-window.h, src/mud-connection-view.c,
	src/mud-connection-view.h, src/Makefile.am: Added in support for
	the tray icon.

	* src/modules.h: Add missing declaration.

2006-01-05  Daniel Patton  <seven-nation@army.com>

	* src/mud-window.c (mud_window_add_connection_view): Real fix for the
	double free.

2006-01-04  Daniel Patton  <seven-nation@army.com>

	* ui/muds.glade, ui/connect.glade: Dialog fixup.

2006-01-04  Daniel Patton  <seven-nation@army.com>

	* src/mud-window.c (mud_window_add_connection_view): Fix double
	free.

2006-01-04  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-window.c (mud_window_populate_profiles_menu): Mark string
	for translation.

	* src/gnome-mud.c (main): Use GETTEXT_PACKAGE in i18n init.

	* src/mud-preferences-window.c (mud_preferences_window_init),
	src/mud-window-mconnect.c (mud_mconnect_window_init),
	src/mud-window-mudedit.c (mud_edit_window_query_glade),
	(props_window_dialog),